# my-katrain-v1.17.0

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  Dgithubkatrain-1.17.0mypy_output_core.txt  FINAL_VERIFICATION_JA.md  FINAL_VERIFICATION_REPORT.md  INSTALL.md  KaTrainQt.spec  LICENSE  PHASE116_EVIDENCE_SUMMARY.md  PHASE116_MERGE_COMPLETE.md  PHASE116_REGRESSION_VERIFICATION.md  PHASE117_PLAN.md  QUICK_VERIFY.md  README.md  VERIFICATION_CHECKLIST.md  commit-msg.txt  debug_katago_loss_values.py  debug_top_moves_issue.py  extract_keys.py  extracted_keys.txt  i18n.py  katrain_debug.txt  manual_verification_guide.py  mypy_output.txt  mypy_output_full.txt  opencode.json  opencode.jsonc  pyproject.toml  reproduce_enum_error.py  ruff_report.txt  test_v6_refinements.py  verify_initialization_logs.py  verify_output.txt  verify_reports.py
.claude/: settings.local.json
docs/: 00-purpose-and-scope.md  01-roadmap.md  02-code-structure.md  03-llm-validation.md  06-kivy-headless-testing.md  i18n-workflow.md  kivy-to-qt-migration-summary.md  kivy_visual_params_provenance.md  phase7-test-guide.md  phase9-completion-summary.md  plan-phase-12.md  plan-phase-19.md  plan-phase-20.md  plan-phase-22-stability.md  plan-phase-ab.md  usage-guide.md
katrain/: __main__.py  __main__.py.backup  config.json  gui.kv  popups.kv
katrain_qt/: README.md  __init__.py  __main__.py  analysis_settings.json  app_qt.py  core_adapter.py  i18n.py  katrain_qt_settings.json  settings.py  sound.py  theme.py
scripts/: audit_exceptions.py  benchmark_batch.py  check_threshold_consistency.py  generate_audit_doc.py  generate_audit_stub.py  generate_metrics.py  run_katrain_ubuntu.sh  test_diagnostics.py  update_po_files.py  validate_phase126.py
spec/: KaTrain.spec
tests/: conftest.py  fakes.py  helpers_critical_moves.py  helpers_eval_metrics.py  kivy_stubs.py  kivy_test_base.py  test_active_review.py  test_active_review_controller.py  test_ai.py  test_ai_strategies.py  test_ai_strategies_parametric.py  test_analysis_engine_config.py  test_analysis_mode.py  test_analysis_orchestrator.py  test_analysis_strength.py  test_architecture.py  test_auto_setup.py  test_base_katrain.py  test_batch_analyzer.py  test_batch_circuit_breaker.py  test_batch_core_imports.py  test_batch_engine_option.py  test_batch_helpers.py  test_batch_json.py  test_board.py  (+146 more)
(+466 files in other folders)
