[project]
name = "KaTrain"
version = "1.17.1"
description = "Go/Baduk/Weiqi playing and teaching app with a variety of AIs"
authors = [{ name = "Sander Land" }]
requires-python = ">=3.11"
readme = "README.md"
license = "MIT"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Topic :: Games/Entertainment :: Board Games",
]
dependencies = [
    "screeninfo>=0.8.1,<0.9 ; platform_system != 'Darwin'",
    "chardet>=5.2.0,<6",
    "docutils>=0.21.2",
    "ffpyplayer>=4.5.1",
    "pyyaml>=6.0.0,<7",
    "urllib3>=2.2.2",
    "kivy>=2.3.1",
    "kivymd==0.104.1",
]

[project.urls]
Homepage = "https://github.com/sanderland/katrain"

[project.scripts]
katrain = "katrain.__main__:run_app"

[dependency-groups]
dev = [
    "ruff>=0.9.0",
    "mypy>=1.8.0",
    "polib>=1.2.0,<2",
    "pyinstaller>=6.14.1",
    "pytest>=8.3.2,<9",
    "types-PyYAML>=6.0.0",
]

[tool.uv]
default-groups = [
    "dev",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E402", "E501"] # Ignore module level import not at top of file, and line too long (formatter handles it)

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests that initialize KaTrainBase (may be slow)",
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

# Phase 112: Global strict flags
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
check_untyped_defs = true
strict_equality = true
extra_checks = true

[[tool.mypy.overrides]]
module = [
    "kivy.*",
    "kivymd.*",
    "kivy_garden.*",
]
ignore_missing_imports = true
ignore_errors = true

[tool.hatch.build.targets.sdist]
include = ["katrain"]

[tool.hatch.build.targets.wheel]
include = ["katrain"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
